Prevent tooltip overlapping header

--- a/src/OverflowVisibleContainer/OverflowVisibleContainer.scss
+++ b/src/OverflowVisibleContainer/OverflowVisibleContainer.scss
@@ -1,6 +1,6 @@
 .kit-overflow-visiblecontainer {
 	position: absolute;
-	z-index: 18;
+	z-index: 9;
 
 	&_fixed {
 		position: fixed;
